# kollege

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  PROJECT_LOG.md  Planungsdokument_KI-Projektassistent.md  README.md  ROADMAP.md  ROADMAP_ARCHIV.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/results/: 2026-07-01_openrouter-google-gemma-4-31b-it.md  2026-07-01_openrouter-mistralai-mistral-medium-3-5.md  2026-07-01_openrouter-mistralai-mistral-medium-3.1.md  2026-07-01_openrouter-mistralai-mistral-medium-3.md  2026-07-01_openrouter-mistralai-mistral-small-2603.md  2026-07-01_openrouter-qwen-qwen-2.5-7b-instruct.md  2026-07-01_openrouter-z-ai-glm-4.5-air.md  2026-07-02_openrouter-deepseek-deepseek-v4-flash.md  2026-07-17_qwen2.5-7b-instruct-two-pass.md
deploy/: de.mengerj.kollege.plist
docs/: benchmark.md  live-testing-guide.md  reminders.example.toml  signal-setup.md
scripts/: benchmark_models.py  run_signal.py  show_trace.py  signal_debug_receive.py  trockenlauf.py
src/kollege/: __init__.py  config.py  models.py  orchestrator.py  reminders.py  trace.py
src/kollege/agent/: __init__.py
src/kollege/channels/: __init__.py  signal_channel.py
src/kollege/db/: __init__.py  repository.py
src/kollege/eval/: __init__.py  fixtures.py  runner.py  scoring.py
src/kollege/logs/: __init__.py
src/kollege/transcription/: __init__.py  faster_whisper.py
tests/: conftest.py  test_agent.py  test_completions.py  test_config.py  test_dauerbetrieb.py  test_db.py  test_eval.py  test_eval_scoring.py  test_interfaces.py  test_known_names.py  test_logs.py  test_models.py  test_orchestrator.py  test_reminders.py  test_reminders_orchestrator.py  test_show_trace.py  test_signal_channel.py  test_task_edits.py  test_trace.py  test_transcription.py
tests/fixtures/eval/: 01_wagner_pflanzplan.json  02_stadtpark_gemeinde.json  03_gartenprofi_anruf.json  04_schneider_angebot.json  05_zwei_aufgaben.json  06_garten_hinterberger_flurstueck.json  07_streuobstwiese_berger_ohne_adresse.json
tests/fixtures/eval_revision/: 01_aibling_rechtschreibkorrektur.json  02_schmidt_namenskorrektur.json  03_erledigungen_bleiben_erhalten.json
