[project]
name = "kollege"
version = "0.0.1"
description = "Persönlicher KI-Projektassistent: passive Erfassung via Sprache/E-Mail, lokal-first, Human-in-the-loop."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Jonatan Menger", email = "jonatan.menger@gmail.com" }]
dependencies = [
    "pydantic>=2.9",
    "pydantic-ai>=0.0.1",
    "pydantic-settings>=2.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "mypy>=1.11",
    "ruff>=0.6",
    "pre-commit>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kollege"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]
# Deutsche Prosa nutzt legitim „..." und En-Dash – keine Homoglyph-Warnungen.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["kollege"]
branch = true

[tool.coverage.report]
show_missing = true
