[project]
name = "kollege"
version = "0.0.1"
description = "Persönlicher KI-Projektassistent: passive Erfassung via Sprache/E-Mail, lokal-first, Human-in-the-loop."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Jonatan Menger", email = "jonatan.menger@gmail.com" }]
dependencies = [
    "pydantic>=2.9",
    "pydantic-ai>=0.0.1",
    "pydantic-settings>=2.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "mypy>=1.11",
    "ruff>=0.6",
    "pre-commit>=3.8",
]
transcription = [
    "faster-whisper>=1.0",
]
signal = [
    "httpx>=0.27",
    "websockets>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kollege"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]
# Deutsche Prosa nutzt legitim „..." und En-Dash – keine Homoglyph-Warnungen.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

[[tool.mypy.overrides]]
# Optionale Dependency-Gruppe — kein Stub im Standard-venv.
module = "faster_whisper"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["httpx", "websockets", "websockets.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers -m 'not slow'"
markers = [
    "slow: marks tests as slow, require faster-whisper installed (deselect with '-m \"not slow\"')",
    "eval: marks eval-set tests (run with 'pytest -m eval'; --real-llm for actual LLM scoring)",
]

[tool.coverage.run]
source = ["kollege"]
branch = true

[tool.coverage.report]
show_missing = true
